# rex

./: .gitignore  .gitmodules  AGENTS.md  ASTPOSTPROCESSING_TODO.md  BUILDING_WITH_CLANG.md  CLANG_FRONTEND_FIXES.md  CLANG_FRONTEND_IMPROVEMENTS.md  CLANG_FRONTEND_TEST_STATUS.md  CLAUDE.md  CMakeLists.txt  FIX_MISSING_HEADER.md  FORTRAN_EVALUATION_STATUS.md  FORTRAN_TESTING_GUIDE.md  MODERNIZATION_ISSUE.md  ROSE_COMPILER_FIXES.md  TEMPLATE_INSTANTIATION_ROADMAP.md  axpy_simple.cpp  build-rex.sh  rose_config.h.in.cmake  test_template.cpp  test_template_simple.cpp
.github/workflows/: auto_tools.yml  ci.yml  cmake.yml
cmake/modules/: roseCMakeDetermineFortranCompiler.cmake  roseChooseBackendCompiler.cmake
config/: Makefile.for.ROSE.includes.and.libs  automake_conditional_display_makefile  support-ofp.m4  support-rose.m4
docs/: CLANG_CPP_TEMPLATE_STATUS.md  CMakeLists.txt  Makefile.am  axpy_clang_frontend.md  clang-openmp-notes.md
docs/Rose/: CMakeLists.txt  Makefile.am  documents.html  rose.cfg.in  rose_exam_1.tex  sage.cfg.in
docs/Rose/Tutorial/: CMakeLists.txt  Makefile.am  tutorial.tex.in
exampleTranslators/documentedExamples/simpleTranslatorExamples/: CMakeLists.txt  Makefile.am
scripts/: Makefile.am
src/: CMakeLists.txt  featureTests.h  rose-config.C
src/3rdPartyLibraries/fortran-parser/: CMakeLists.txt
src/3rdPartyLibraries/json/: Makefile.am  README
src/ROSETTA/Grammar/: Expression.code  Statement.code  Support.code
src/ROSETTA/src/: AstNodeClass.C  grammarString.C  support.C
src/backend/unparser/: IncludedFilesUnparser.C  nameQualificationSupport.C  unparser.C
src/backend/unparser/CxxCodeGeneration/: unparseCxx_expressions.C  unparseCxx_types.C
src/backend/unparser/languageIndependenceSupport/: modified_sage.C
src/frontend/CxxFrontend/: CMakeLists.txt  edg-dummy.C
src/frontend/CxxFrontend/Clang/: CMakeLists.txt  clang-builtin-c.h  clang-frontend-decl.cpp  clang-frontend-private.hpp  clang-frontend-stmt.cpp  clang-frontend-type.cpp  clang-frontend.cpp  clang-to-dot-decl.cpp  clang-to-dot-private.hpp  clang-to-dot-stmt.cpp  clang-to-dot-type.cpp  clang-to-dot.cpp  clang-to-rose-support.cpp  clang_graph.h
src/frontend/Experimental_General_Language_Support/: Tokens.h
src/frontend/OpenFortranParser_SAGE_Connection/: openFortranParser_main.C
src/frontend/SageIII/: Makefile.am  attachPreprocessingInfoTraversal.C  attributeListMap.h  manglingSupport.C  memory-pool-snapshot.C  ompAstConstruction.h  rose_attributes_list.h  rose_graph_support.C  rtiHelpers.h  sage3basic.h
src/frontend/SageIII/astPostProcessing/: CMakeLists.txt  astPostProcessing.C  fixupFileInfoFlags.C  fixupTypeReferences.C
src/frontend/SageIII/astTokenStream/: Makefile.am  doCompleteMapping.C  doCompleteMapping.h  linearizeAST.C
src/frontend/SageIII/includeDirectivesProcessing/: CompilerOutputParser.C
src/frontend/SageIII/sageInterface/: CMakeLists.txt  Makefile.am  sageBuilder.C  sageBuilder_fortran.C  sageFunctors.h  sageInterface.C
src/frontend/SageIII/sage_support/: cmdline.cpp  keep_going.cpp  sage_support.cpp  utility_functions.C  utility_functions.h
src/frontend/SageIII/virtualCFG/: memberFunctions.C
src/midend/abstractLayer/: SgNodeHelper.C
src/midend/astDiagnostics/: AstPerformance.C
src/midend/astDump/: AstPDFGeneration.C  astGraph.C  astGraph.h
src/midend/astProcessing/: AstAttributeMechanism.C  CMakeLists.txt  Makefile.am-recursive  Makefile_variables  plugin.C
src/midend/astQuery/: astQuery.C  astQuery.h  nameQuery.C  nodeQuery.C  nodeQuery.h  numberQuery.C  queryVariant.C
src/midend/astUtil/astInterface/: CPPAstInterface.C
src/midend/programAnalysis/: Makefile.am
src/midend/programAnalysis/CallGraphAnalysis/: CMakeLists.txt  CallGraph.C  CallGraph.h  ClassHierarchyGraph.h  Makefile.am  Makefile_variables  newCallGraph.C
src/midend/programAnalysis/OAWrap/: OAWrap.h
src/midend/programAnalysis/VirtualFunctionAnalysis/: IntraProcAliasAnalysis.C  IntraProcAliasAnalysis.h  PtrAliasAnalysis.C  PtrAliasAnalysis.h  VirtualFunctionAnalysis.C
src/midend/programAnalysis/defUseAnalysis/: DefUseAnalysis.cpp  DefUseAnalysis.h  LivenessAnalysis.cpp
src/midend/programAnalysis/genericDataflow/analysis/: dataflow.C  dataflow.h
src/midend/programAnalysis/genericDataflow/rwAccessLabeler/: rwAccessLabeler.C
src/midend/programAnalysis/genericDataflow/simpleAnalyses/: divAnalysis.C  divAnalysis.h  liveDeadVarAnalysis.h
src/midend/programAnalysis/pointerAnal/: PtrAnal.h
src/midend/programAnalysis/variableRenaming/: VariableRenaming.C  VariableRenaming.h
src/midend/programTransformation/astOutlining/: PragmaInterface.cc  PreprocessingInfo.cc  StmtRewrite.cc  Transform.cc  VarSym.cc
src/midend/programTransformation/constantFolding/: constantFolding.h
src/midend/programTransformation/extractFunctionArgumentsNormalization/: ExtractFunctionArguments.C
src/midend/programTransformation/implicitCodeGeneration/: destructorCallAnnotator.C
src/midend/programTransformation/ompLowering/: README
src/util/: CMakeLists.txt  FileSystem.C  FileSystem.h  Makefile.am  Unique.C  Unique.h  mlog.h  rose_isnan.h  rose_paths.h
src/util/StringUtility/: CMakeLists.txt  Convert.C  Escape.C  FileNameClassifier.C  FileUtility.C  IntegerOps.h  Makefile.am  NumberToString.C  NumberToString.h  Replace.C  Replace.h  StringUtility.h  Trim.h
src/util/commandlineProcessing/: commandline_processing.C  sla++.C
src/util/support/: FileHelper.h
tests/nonsmoke/functional/: CMakeLists.txt
tests/nonsmoke/functional/CompileTests/: CMakeLists.txt  Makefile.am
tests/nonsmoke/functional/CompileTests/NewEDGInterface_C_tests/: CMakeLists.txt
tests/nonsmoke/functional/CompileTests/OpenMP_tests/: CMakeLists.txt  README
tests/nonsmoke/functional/input_codes/: axpy.cpp
tests/nonsmoke/functional/roseTests/: CMakeLists.txt
tests/nonsmoke/functional/roseTests/astInterfaceTests/: CMakeLists.txt  insertBeforeUsingCommaOp.C
tests/nonsmoke/functional/translatorTests/: CMakeLists.txt
tests/smoke/unit/: Makefile.am
tools/: makefile.external
tutorial/: buildVFA.C
(+19 files in other folders)
